correction du footer (Overlaps avec la barre de navigation)(

--- a/codeInitial/css/navbar_footer.css
+++ b/codeInitial/css/navbar_footer.css
@@ -99,7 +99,7 @@
       color: rgb(1, 1, 1);
       font-family: 'Roboto', sans-serif;
       text-align: center;
-      z-index: 1000;
+
       margin-left: 0%;
       margin-top: 10px;
     }
